Added support for fees

--- a/frontend/shared/scss/components/buttons.scss
+++ b/frontend/shared/scss/components/buttons.scss
@@ -506,8 +506,7 @@
             }
         }
 
-        &:disabled,
-        &.disabled {
+        &:disabled {
             color: $color-gray-2;
             cursor: not-allowed;
         }
