--- a/frontend/shared/scss/base/dark-modus.scss
+++ b/frontend/shared/scss/base/dark-modus.scss
@@ -1,7 +1,19 @@
 @use "./variables.scss" as *;
 
+body {
+    // Indicate both are supported
+    color-scheme: light dark;
+}
+
 body.dark {
+    // Force dark
+    color-scheme: dark;
     @include dark-modus;
+}
+
+body.light {
+    // Force light mode
+    color-scheme: light;
 }
 
 body:not(.light) {
@@ -13,5 +25,22 @@ body:not(.light) {
 @media (prefers-color-scheme: dark) {
     img[src*=".svg"] {
         filter: contrast(0.7);
+    }
+}
+
+
+body:not(.light) {
+    @media (prefers-color-scheme: dark) {
+        .st-color-directive {
+            // Colors need to be recalculated using the local color hue and saturation
+            @include dark-modus;
+        }
+    }
+}
+
+body.dark {
+    .st-color-directive {
+        // Colors need to be recalculated using the local color hue and saturation
+        @include dark-modus;
     }
 }
