--- a/frontend/shared/scss/layout/popup.scss
+++ b/frontend/shared/scss/layout/popup.scss
@@ -5,10 +5,10 @@
 .modal-full-height {
     @extend .modal;
 
-    > div {
+    >div {
         height: var(--popup-height);
 
-        
+
     }
 }
 
@@ -18,14 +18,15 @@
 
     --popup-padding-top-outside: max(var(--popup-padding-top-full, 0px), calc(40px * var(--keyboard-closed, 1)));
     --popup-padding-bottom-outside: max(0px, calc(80px - var(--popup-padding-top-outside, 0px)));
+    --st-horizontal-padding: var(--popup-horizontal-padding, 40px);
 
-    @media (min-height: 1100px) {
+    @media (min-height: 1200px) {
         // Limit the total height of the popup to max(50vh, 1000px)
-        --popup-padding-top-outside: max(var(--popup-padding-top-full, 0px), calc(calc(50vh - 500px) * var(--keyboard-closed, 1)));
-        --popup-padding-bottom-outside: calc(100vh - 1000px - var(--popup-padding-top-outside, 0px));
+        --popup-padding-top-outside: max(var(--popup-padding-top-full, 0px), calc(calc(50vh - 550px) * var(--keyboard-closed, 1)));
+        --popup-padding-bottom-outside: calc(100vh - 1100px - var(--popup-padding-top-outside, 0px));
     }
 
-    @media (max-height: 900px) {
+    @media (max-height: 1000px) {
         // 20px on top, 0 bottom, unless the keyboard is open (then reverse)
         --popup-padding-top-outside: max(var(--popup-padding-top-full, 0px), calc(20px * var(--keyboard-closed, 1)));
         --popup-padding-bottom-outside: calc(20px - var(--popup-padding-top-outside, 0px));
@@ -40,22 +41,25 @@
         display: none;
     }
 
-    > div {
+    >div {
         position: absolute;
         left: 50%;
         top: 0;
 
-        background: $color-background;
+        background: $color-background-lighter;
+        --color-current-background: #{$color-background-lighter};
+        --color-current-background-shade: #{$color-background-lighter-shade};
+
         border-radius: $border-radius-modals;
 
         box-shadow: 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
         transition: transform 0.3s, opacity 0.3s, visibility step-start 0.3s;
-        
+
         transform: translate(-50%, var(--popup-padding-top-outside, 0px));
         transform-origin: 50% 0%;
         visibility: visible;
 
-        @media (max-height: 900px) {
+        @media (max-height: 1000px) {
             border-bottom-left-radius: 0px;
             border-bottom-right-radius: 0px;
         }
@@ -78,7 +82,7 @@
     }
 
     &.push-down-full {
-        > div {
+        >div {
             transition: transform 0.3s, opacity 0.3s, visibility step-end 0.3s;
             transform: translate3d(-50%, calc(var(--popup-padding-top-outside, 0px) - 15px), 0) scale(0.9, 0.9);
             visibility: hidden;
@@ -94,7 +98,7 @@
     }
 
     &.push-down {
-        > div {
+        >div {
             transform: translate3d(-50%, calc(var(--popup-padding-top-outside, 0px) - 10px), 0) scale(0.95, 0.95);
 
             &:after {
