--- a/frontend/shared/assets/images/icons/iconCss.hbs
+++ b/frontend/shared/assets/images/icons/iconCss.hbs
@@ -4,6 +4,8 @@ font-display: block;
 src: {{{src}}};
 }
 
+/** SHADOW-DOM */
+
 .icon:before, .icon-base:before, .icon.stroke:after {
 font-family: {{fontName}} !important;
 font-style: normal;
