--- a/frontend/shared/scss/main.scss
+++ b/frontend/shared/scss/main.scss
@@ -19,3 +19,4 @@
 @use "./components/member-details";
 @use "./components/editor";
 @use "./components/legal-footer";
+@use './layout/split-inputs';
