--- a/frontend/shared/scss/elements/body.scss
+++ b/frontend/shared/scss/elements/body.scss
@@ -104,7 +104,7 @@
 
 }
 
-body {
+body, :host {
     --color-current-background: #{$color-background};
     --color-current-background-shade: #{$color-background-shade};
 
@@ -116,7 +116,7 @@ body {
 }
 
 body,
-html {
+html, :host {
     margin: 0;
     padding: 0;
     font-family: "Metropolis", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
