--- a/frontend/shared/assets/images/icons/iconCss.hbs
+++ b/frontend/shared/assets/images/icons/iconCss.hbs
@@ -4,7 +4,7 @@ font-display: block;
 src: {{{src}}};
 }
 
-/** SHADOW-DOM */
+/** @preserve SHADOW-DOM */
 
 .icon:before, .icon-base:before, .icon.stroke:after {
 font-family: {{fontName}} !important;
