--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -203,6 +203,14 @@
         font-size: 10px;
         margin-bottom: 4px;
     }
+
+    &.large {
+        font-size: 14px;
+
+        @media (max-width: 400px) {
+            font-size: 12px;
+        }
+    }
 }
 
 .style-title-prefix-list {
@@ -487,6 +495,21 @@
     }
 }
 
+.style-description-large {
+    @extend .font-size-description;
+
+    font-size: 17px;
+    line-height: 1.5;
+    font-weight: $font-weight-default;
+    color: $color-gray-text;
+    font-variation-settings: 'opsz' 19;
+
+    strong {
+        @extend .style-strong;
+    }
+}
+
+
 .inline-size {
     // The width of the description should not affect the width of the parent
     contain: inline-size;
@@ -526,6 +549,20 @@
 .style-description-block {
     @extend .style-description;
     padding-bottom: 20px;
+
+    &:last-child {
+        padding-bottom: 0;
+    }
+
+    &:empty {
+        display: none;
+    }
+}
+
+.style-description-block-large {
+    @extend .style-description-large;
+    padding-top: 20px;
+    padding-bottom: 30px;
 
     &:last-child {
         padding-bottom: 0;
