--- a/frontend/shared/scss/components/icons.scss
+++ b/frontend/shared/scss/components/icons.scss
@@ -8,7 +8,7 @@
         line-height: 1;
         font-size: 24px;
         vertical-align: middle !important;
-        font-family: icons !important;
+        font-family: st-icons !important;
         font-style: normal;
         font-weight: normal !important;
     }
@@ -135,7 +135,7 @@
     &:before {
         line-height: 1;
         font-size: 24px;
-        font-family: icons !important;
+        font-family: st-icons !important;
         font-style: normal;
         font-weight: normal !important;
 
