--- a/frontend/shared/scss/components/errors.scss
+++ b/frontend/shared/scss/components/errors.scss
@@ -117,6 +117,10 @@
         margin-top: -7px;
     }
 
+    .st-input-box + & {
+        margin-top: 5px;
+    }
+
     > .button {
         &.text {
             color: inherit;
